methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:32: error: value update is not a member of Boolean
while(haveBaggle() = false){
      ^MethodsReturning:35: error: not found: value haveBaggel
  if(!haveBaggel()){
      ^