methods.returning.MethodsReturning.scala.code
var vuBiscuit = 0
def haveBaggle():Boolean = {
  if(vuBiscuit != 0){
    return true
  } else {
    return false
    
  }
}

def deplacement(){
  for(i <- 1 to 6){
    avance()
    if(estSurBiscuit()){
      vuBiscuit=vuBiscuit+1
    }
  }
  
}

def demitour(){
  gauche()
  gauche()
  for(i <- 1 to 6){
    avance()
  }
  gauche()
  avance()
  gauche()  
}

while(haveBaggle() = false){
  vuBiscuit = 0
	deplacement()
  if(!haveBaggel()){
    demitour
    }
}